objects/Service_and_Demontration__c.object
<CustomObject>
    <fields>
        <fullName>Acquired_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acquired by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Services_Demos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>The same values as on Project object.</description>
        <inlineHelpText>Specifies the machine/application of the online monitoring system or NDT solution.</inlineHelpText>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ball mill drive</fullName>
                </value>
                <value>
                    <fullName>centrifuge</fullName>
                </value>
                <value>
                    <fullName>cogeneration turbine</fullName>
                </value>
                <value>
                    <fullName>cold rolling mill</fullName>
                </value>
                <value>
                    <fullName>combustion motor</fullName>
                </value>
                <value>
                    <fullName>compressor</fullName>
                </value>
                <value>
                    <fullName>conveyor</fullName>
                </value>
                <value>
                    <fullName>crane drive</fullName>
                </value>
                <value>
                    <fullName>electric motor</fullName>
                </value>
                <value>
                    <fullName>escalator drive</fullName>
                </value>
                <value>
                    <fullName>extruder</fullName>
                </value>
                <value>
                    <fullName>gas turbine</fullName>
                </value>
                <value>
                    <fullName>gearbox</fullName>
                </value>
                <value>
                    <fullName>generator</fullName>
                </value>
                <value>
                    <fullName>hot rolling mill</fullName>
                </value>
                <value>
                    <fullName>hydraulic pump</fullName>
                </value>
                <value>
                    <fullName>hydro turbine</fullName>
                </value>
                <value>
                    <fullName>ID fan</fullName>
                </value>
                <value>
                    <fullName>machine tool</fullName>
                </value>
                <value>
                    <fullName>mixer</fullName>
                </value>
                <value>
                    <fullName>paper machine</fullName>
                </value>
                <value>
                    <fullName>press</fullName>
                </value>
                <value>
                    <fullName>printing machine</fullName>
                </value>
                <value>
                    <fullName>process fan</fullName>
                </value>
                <value>
                    <fullName>pump</fullName>
                </value>
                <value>
                    <fullName>reciprocating compressor</fullName>
                </value>
                <value>
                    <fullName>refiner</fullName>
                </value>
                <value>
                    <fullName>robot drive</fullName>
                </value>
                <value>
                    <fullName>screw compressor</fullName>
                </value>
                <value>
                    <fullName>steam turbine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bussines_Unit__c</fullName>
        <formula>TEXT(Owner:User.sf42_Business_Unit__c)</formula>
        <label>Bussines Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_SD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campaign relation for training purposes with Service&amp;Demo</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Services &amp; Demos</relationshipLabel>
        <relationshipName>Services_Demos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment_to_Acquired__c</fullName>
        <label>Comment to Acquired</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Complex_Machines__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Multistage machine or machine operating under non-stationary conditions (speed and load).</inlineHelpText>
        <label>Complex Machines #</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Critical_Machines__c</fullName>
        <inlineHelpText>Asset that, if it fails, significantly impacts customers capacity assurance due to operational, environmental or quality issues.</inlineHelpText>
        <label>Critical Machines #</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Service &amp; Demo object to manage order processing and invoicing</inlineHelpText>
        <label>Customer Asset</label>
        <referenceTo>Customer_Asset__c</referenceTo>
        <relationshipLabel>Services &amp; Demos</relationshipLabel>
        <relationshipName>Services_Demos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_2__c</fullName>
        <description>Agent / Trading Company</description>
        <formula>sf42_Contact2__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineer_1_Text__c</fullName>
        <inlineHelpText>This is for listing Engineers who no longer work here or other people who are not in SalesForce.</inlineHelpText>
        <label>Engineer 1 - Text</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineer_2_Text__c</fullName>
        <inlineHelpText>This is for listing Engineers who no longer work here or other people who are not in SalesForce.</inlineHelpText>
        <label>Engineer 2 - Text</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expenses_Amount__c</fullName>
        <description>Amount of expenses.</description>
        <label>Expenses Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feed_Back__c</fullName>
        <label>Feed Back</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsUniversalID__c</fullName>
        <externalId>true</externalId>
        <label>IsUniversalID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <inlineHelpText>Local Windows folder on Server</inlineHelpText>
        <label>Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machines__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of machines as train components, that are directly monitored (e.g. Motor, gearbox).</inlineHelpText>
        <label>Machines #</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Measured_Variable__c</fullName>
        <label>Measured Variable</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vib- Machines Vibrations</fullName>
                </value>
                <value>
                    <fullName>Vib- Acoustics</fullName>
                </value>
                <value>
                    <fullName>Vib- Ultra Sound Vibrations</fullName>
                </value>
                <value>
                    <fullName>Vib- Radial Shaft Vibration</fullName>
                </value>
                <value>
                    <fullName>Vib- Axial Shaft Vibration</fullName>
                </value>
                <value>
                    <fullName>Vib- Shaft Displacement</fullName>
                </value>
                <value>
                    <fullName>Vib- Orbit Analysis</fullName>
                </value>
                <value>
                    <fullName>Vib- Phase Analysis</fullName>
                </value>
                <value>
                    <fullName>Vib- Displacement</fullName>
                </value>
                <value>
                    <fullName>Vib- Distortion</fullName>
                </value>
                <value>
                    <fullName>Vib- Torque</fullName>
                </value>
                <value>
                    <fullName>Vib- Bending Moment</fullName>
                </value>
                <value>
                    <fullName>Vib- Force Measurement</fullName>
                </value>
                <value>
                    <fullName>Vib- Stress / Strain Measurements</fullName>
                </value>
                <value>
                    <fullName>Vib- Electrical Load Analysis</fullName>
                </value>
                <value>
                    <fullName>Vib- Modal Analysis</fullName>
                </value>
                <value>
                    <fullName>Vib- Structure Analysis</fullName>
                </value>
                <value>
                    <fullName>Vib- ODS Analysis</fullName>
                </value>
                <value>
                    <fullName>Vib- OMA Analysis</fullName>
                </value>
                <value>
                    <fullName>Vib- Resonance Analysis</fullName>
                </value>
                <value>
                    <fullName>Geo- Flatness</fullName>
                </value>
                <value>
                    <fullName>Geo- Parallelism of Axis</fullName>
                </value>
                <value>
                    <fullName>Geo- Parallelism of Shafts</fullName>
                </value>
                <value>
                    <fullName>Geo- Machine Line</fullName>
                </value>
                <value>
                    <fullName>Geo- Temporary Machine Line</fullName>
                </value>
                <value>
                    <fullName>Geo- Alignment of Shafts</fullName>
                </value>
                <value>
                    <fullName>Geo- Alignment of Bores</fullName>
                </value>
                <value>
                    <fullName>Geo- Thermal Growth (measured)</fullName>
                </value>
                <value>
                    <fullName>Geo- Parallelism of Rollers</fullName>
                </value>
                <value>
                    <fullName>Geo- Straighness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NDT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NDT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <inlineHelpText>Name of Service or Demo.</inlineHelpText>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operational_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operational Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Services &amp; Demos (Operational Account)</relationshipLabel>
        <relationshipName>Services_Demos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operational_Address__c</fullName>
        <formula>Operational_Account__r.BillingStreet &amp;&quot;, &quot;&amp; Operational_Account__r.BillingPostalCode &amp;&quot; &quot;&amp; Operational_Account__r.BillingCity</formula>
        <label>Operational Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operational_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operational Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Operational_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Services &amp; Demos (Operational Contact)</relationshipLabel>
        <relationshipName>Services_Demos_Operational_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operational_Email__c</fullName>
        <formula>Operational_Contact__r.Account.sf42_de_Email__c</formula>
        <label>Operational Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operational_Phone__c</fullName>
        <formula>Operational_Contact__r.Phone</formula>
        <label>Operational Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>ptt_Opportunity__r.Owner.Full_Name_for_filters__c</formula>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Processing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Processing</label>
        <referenceTo>Order_Processing__c</referenceTo>
        <relationshipLabel>Services &amp; Demos</relationshipLabel>
        <relationshipName>Services_Demos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Address__c</fullName>
        <formula>sf42_Account__r.BillingStreet &amp;&quot;, &quot;&amp;  sf42_Account__r.BillingPostalCode  &amp;&quot; &quot;&amp; sf42_Account__r.BillingCity</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_customer_Account_Phone__c</fullName>
        <formula>sf42_Account__r.Phone</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_customer_account_FAX__c</fullName>
        <formula>sf42_Account__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FAX</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Number__c</fullName>
        <inlineHelpText>Customer Purchase Order Number</inlineHelpText>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Activity__c</fullName>
        <label>Service Activity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GEO1 Multiple machine train laser shaft alignment</fullName>
                </value>
                <value>
                    <fullName>GEO2 Roller alignment with PARALIGN/ROLLALIGN</fullName>
                </value>
                <value>
                    <fullName>GEO3 Machine to base line measurements</fullName>
                </value>
                <value>
                    <fullName>GEO4 Structure and machine element laser based measurements</fullName>
                </value>
                <value>
                    <fullName>GEO5 Determination cold alignment target values</fullName>
                </value>
                <value>
                    <fullName>MD1 Online-Monitoring of machines and assets</fullName>
                </value>
                <value>
                    <fullName>MD2 Condition monitoring partner concept CPK and remote diagnosis service</fullName>
                </value>
                <value>
                    <fullName>MD3 Damage analysis and consulting</fullName>
                </value>
                <value>
                    <fullName>MD4 Optimization of process and quality conditions</fullName>
                </value>
                <value>
                    <fullName>TC1 Product training</fullName>
                </value>
                <value>
                    <fullName>TC2 ISO certified personal training</fullName>
                </value>
                <value>
                    <fullName>TC3 Application training</fullName>
                </value>
                <value>
                    <fullName>TS1 Installation and commissioning of online CMS</fullName>
                </value>
                <value>
                    <fullName>TS2 Maintenance for online CMS</fullName>
                </value>
                <value>
                    <fullName>TS3 Consulting and technical support for VIB/GEO measurement techniques</fullName>
                </value>
                <value>
                    <fullName>VIB1 In situ and precise balancing</fullName>
                </value>
                <value>
                    <fullName>VIB2 Vibration measurements, diagnosis and acceptance measurements</fullName>
                </value>
                <value>
                    <fullName>VIB3 Sound and natural excitation analysis</fullName>
                </value>
                <value>
                    <fullName>VIB4 Shaft vibrations and motion analysis</fullName>
                </value>
                <value>
                    <fullName>VIB5 Load and stress measurements</fullName>
                </value>
                <value>
                    <fullName>VIB6 Temporary telediagnosis service TTS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Amount__c</fullName>
        <description>Field used to see several Services amount on S&amp;D related list at Opportunity.</description>
        <inlineHelpText>Total completed service amount for invoice.</inlineHelpText>
        <label>Service Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_End_Date__c</fullName>
        <label>Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Function__c</fullName>
        <label>Service Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SC-FA Service on Objects</fullName>
                </value>
                <value>
                    <fullName>SC-FB Service for PT-Products</fullName>
                </value>
                <value>
                    <fullName>SC-FC Service for/with People</fullName>
                </value>
                <value>
                    <fullName>SC-FD Service with Companies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Product__c</fullName>
        <label>Service Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PA- Corrective service</fullName>
                </value>
                <value>
                    <fullName>PB- Preventive service</fullName>
                </value>
                <value>
                    <fullName>PC-TeleMonitoring&amp;Diagnostics Service</fullName>
                </value>
                <value>
                    <fullName>PD-PT-Product Service</fullName>
                </value>
                <value>
                    <fullName>PE- Training &amp; Education Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Sub_Function__c</fullName>
        <label>Service Sub Function</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Service_Function__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Systems Engineering (OEM)</fullName>
                </value>
                <value>
                    <fullName>Machine Construction</fullName>
                </value>
                <value>
                    <fullName>Pumps/ Compressors</fullName>
                </value>
                <value>
                    <fullName>Fans/ Ventilators</fullName>
                </value>
                <value>
                    <fullName>Elektrical Engineering</fullName>
                </value>
                <value>
                    <fullName>Motor/ Gearbox / Coupling</fullName>
                </value>
                <value>
                    <fullName>Test stations (OEM)</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Rail-Transport-Crane</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Chemical Industry</fullName>
                </value>
                <value>
                    <fullName>Oil Industry</fullName>
                </value>
                <value>
                    <fullName>Power Plants</fullName>
                </value>
                <value>
                    <fullName>Plastics/ Synthetic Material</fullName>
                </value>
                <value>
                    <fullName>Aerospace</fullName>
                </value>
                <value>
                    <fullName>Food Industry</fullName>
                </value>
                <value>
                    <fullName>Paper-Print-Wood</fullName>
                </value>
                <value>
                    <fullName>Marine</fullName>
                </value>
                <value>
                    <fullName>Hydropower</fullName>
                </value>
                <value>
                    <fullName>Wind Power</fullName>
                </value>
                <value>
                    <fullName>Cement Industry</fullName>
                </value>
                <value>
                    <fullName>Buildings /Structure</fullName>
                </value>
                <value>
                    <fullName>Pipes / Tubes</fullName>
                </value>
                <value>
                    <fullName>VIBXPERT</fullName>
                </value>
                <value>
                    <fullName>ROTALIGN</fullName>
                </value>
                <value>
                    <fullName>BORALIGN</fullName>
                </value>
                <value>
                    <fullName>CENTRALIGN</fullName>
                </value>
                <value>
                    <fullName>PARALIGN</fullName>
                </value>
                <value>
                    <fullName>LEVALIGN / LEVALIGN expert</fullName>
                </value>
                <value>
                    <fullName>SHAFTALIGN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <inlineHelpText>How many times have we done service with this client?</inlineHelpText>
        <label>Service #</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used if a Survey Response for Service has been completed.
True - completed with success</description>
        <label>Survey Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Survey sent</fullName>
                </value>
                <value>
                    <fullName>Survey needed</fullName>
                    <default>true</default>
                    <label>Survey needed</label>
                </value>
                <value>
                    <fullName>Survey sent to customer</fullName>
                </value>
                <value>
                    <fullName>Waiting for survey</fullName>
                </value>
                <value>
                    <fullName>Survey received</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Invitation sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travel_Amount__c</fullName>
        <label>Travel Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_days__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Number of service days.</inlineHelpText>
        <label># of days</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ptt_ALI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ALI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_Account_State__c</fullName>
        <formula>sf42_Account__r.BillingState</formula>
        <label>Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Account_from_contact_1__c</fullName>
        <formula>sf42_Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account 1 FC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Account_from_contact_2__c</fullName>
        <formula>sf42_Contact2__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_CM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ALI - ALIGNEO</fullName>
                </value>
                <value>
                    <fullName>ALI - ALIGNEO EX</fullName>
                </value>
                <value>
                    <fullName>ALI - ALIGNMENT CENTER</fullName>
                </value>
                <value>
                    <fullName>ALI - ALIGNMENT REPORTER</fullName>
                </value>
                <value>
                    <fullName>ALI - Centralign</fullName>
                    <label>ALI - CENTRALIGN</label>
                </value>
                <value>
                    <fullName>ALI - CENTRALIGN Advanced</fullName>
                </value>
                <value>
                    <fullName>ALI - CENTRALIGN Expert</fullName>
                </value>
                <value>
                    <fullName>ALI - CENTRALIGN Standard</fullName>
                </value>
                <value>
                    <fullName>ALI - Demo Rig</fullName>
                </value>
                <value>
                    <fullName>ALI - GEOCenter</fullName>
                </value>
                <value>
                    <fullName>ALI - Hydralign</fullName>
                    <label>ALI - HYDRALIGN</label>
                </value>
                <value>
                    <fullName>ALI - Hydropower</fullName>
                </value>
                <value>
                    <fullName>ALI - Inclineo</fullName>
                    <label>ALI - INCLINEO</label>
                </value>
                <value>
                    <fullName>ALI - LEVALIGN Expert</fullName>
                </value>
                <value>
                    <fullName>ALI - LEVALIGN Ultra</fullName>
                </value>
                <value>
                    <fullName>ALI - old - GEO</fullName>
                </value>
                <value>
                    <fullName>ALI - old - OPTALIGN</fullName>
                </value>
                <value>
                    <fullName>ALI - old - ROTALIGN</fullName>
                </value>
                <value>
                    <fullName>ALI - old - ROTALIGN Ultra iS Lite</fullName>
                </value>
                <value>
                    <fullName>ALI - OPTALIGN smart</fullName>
                </value>
                <value>
                    <fullName>ALI - OPTALIGN smart EX</fullName>
                </value>
                <value>
                    <fullName>ALI - OPTALIGN smart RS</fullName>
                </value>
                <value>
                    <fullName>ALI - OPTALIGN smart RS5</fullName>
                </value>
                <value>
                    <fullName>ALI - OPTALIGN smart straightntess</fullName>
                </value>
                <value>
                    <fullName>ALI - OPTALIGN touch</fullName>
                </value>
                <value>
                    <fullName>ALI - Paralign</fullName>
                    <label>ALI - PARALIGN</label>
                </value>
                <value>
                    <fullName>ALI - PENTALIGN</fullName>
                </value>
                <value>
                    <fullName>ALI - Permalign</fullName>
                    <label>ALI - PERMALIGN</label>
                </value>
                <value>
                    <fullName>ALI - PROPALIGN</fullName>
                </value>
                <value>
                    <fullName>ALI - RGA Services (S)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ptt_Device_1_serial_no__c</fullName>
        <formula>ptt_Device_Used_1__r.sf42_Serial_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device 1 serial no</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Device_2_serial_no__c</fullName>
        <formula>ptt_Device_Used_2__r.sf42_Serial_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device 2 serial no</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Device_Used_1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Device Used 1</label>
        <referenceTo>sf42_Devices__c</referenceTo>
        <relationshipLabel>Services &amp; Demos</relationshipLabel>
        <relationshipName>Services_Demos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_Device_Used_2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Device Used 2</label>
        <referenceTo>sf42_Devices__c</referenceTo>
        <relationshipLabel>Services &amp; Demos (Device Used 2)</relationshipLabel>
        <relationshipName>Services_Demos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_Documents__c</fullName>
        <inlineHelpText>Link where the needed documents are stored. Could be FTP could be network drive.</inlineHelpText>
        <label>Documents</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ptt_Email_1__c</fullName>
        <formula>sf42_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Industry__c</fullName>
        <formula>TEXT(sf42_Account__r.Industry)</formula>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Industry_subcategory__c</fullName>
        <formula>TEXT( sf42_Account__r.Industry_subcategory__c )</formula>
        <label>Industry subcategory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Machine_Description__c</fullName>
        <description>Name of the machine that was measured.</description>
        <inlineHelpText>Name of the machine that was measured.</inlineHelpText>
        <label>Machine Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ptt_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Opportunity which was won for the service.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Services &amp; Demos</relationshipLabel>
        <relationshipName>Services_Demos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_Phone_1__c</fullName>
        <formula>sf42_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Phone_2__c</fullName>
        <description>Agent / Trading Company</description>
        <formula>sf42_Contact2__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
</CustomObject>